add laabel to subsection

--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -483,7 +483,7 @@ Consensus\footnote{\textcite{hastie-elemstatslearn} P. 260} is that in general C
 
 
 
-\subsection{CV Scores in Classification Learning}
+\subsection{CV Scores in Classification Learning}\label{section:scoring_functions}
 
 In binary classification, the contingency table summarizes all of the learner's training performances. This shows the count of the amount of samples that fall into one of the four groups derived from the comparison between the model's output and the observed data for the labels.
 
