--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -432,32 +432,23 @@ In this work, we will be only considering model regularization with lasso, ridge
 
 As an example we show here how regularization affects an instance of a Logistic Classifier over the  \cref{def:problems} \cref{itm:target1}.
 
+% figures/regularization/figure-log_loss_error_validation_curve.png
 
-\todo{add regularization figure for logloss}
+\begin{figure}[h!]
+\begin{center}
+\includegraphics[width=0.7\columnwidth]{figures/regularization/figure-log_loss_error_validation_curve.png}
+\caption{ Validation curve comparing the \textit{negative log loss} for different values of the $C$ regularization parameter.}
+\label{fig:log_loss_regularization_validation_curve}
+\end{center}
+\end{figure}
 
-%\begin{figure}[h!]
-%\begin{center}
-%\includegraphics[width=0.7\columnwidth]{figures/regularization/figure-figure-log_los_error_validation_curve.png}
-%\caption{ Validation curve comparing log loss for different values of the $C$ regularization parameter. }
-%\label{fig:log_loss_regularization_validation_curve}
-%\end{center}
-%\end{figure}
-
-In this simple case we used all of the features from $\mathrm{T}$ and we generated multiple models $f(x,\cdot)$. We defined
+In this simple case we used all of the features from $\mathrm{T}$ and we generated multiple models $f(x,C)$ where we defined
 $$C = \frac{1}{\lambda}$$
-and built models for different values of $C$. Each resulting model's error was measured for the $\mathrm{T}$ and $\mathrm{Ts}$ sets seprately and graphed in \cref{fig:log_loss_regularization_validation_curve}. As we can see from this graph, there is a clear tendency to have beter performance across smaller values of $C$ which is equivalent to having stronger model regularizations. 
-Then we compared the losses of each model $f(\cdot,C)$
 
+Each model is built from a specific $C$ in  $[10^{-5},10^5]$  the model's negative log loss error was measured for the $\mathrm{T}$ and $\mathrm{Ts}$ sets separately. These errors are graphed in \cref{fig:log_loss_regularization_validation_curve}.
 
-%As a second option, we did the same as before but using a different loss function called the ``area under the receiver operating characteristic curve''. We will expand on this scoring function later in \cref{section:scoring_functions}. This function will have higher values for better classifiers and with this, the following graphic confirms the idea that having a regularized model means having better performance across training and testing sets. The tendency shows that the smaller the value of $C$, the bette the model performance.
+As we can see, there is a clear tendency to have beter performance across smaller values of $C$ which is equivalent to having stronger model regularizations. Note that the negative log loss will have higher values for better classifiers. Thus as a simple case and with no other manipulation of the data, we find that a regularized model helps in having a better performance across the test and train sets error.
 
-%\begin{figure}[h!]
-%\begin{center}
-%\includegraphics[width=0.7\columnwidth]{figures/regularization/figure-log_loss_error_validation_curve.png}
-%\caption{ Validation curve comparing ROC AUC loss for different values of the $C$ regularization parameter. }
-%\label{fig:log_loss_regularization_validation_curve}
-%\end{center}
-%\end{figure}
 
 
 \subsection{HyperParameters}
