move conclusions into combined results and conclusion chapter

--- a/ch_results_conclusions.tex
+++ b/ch_results_conclusions.tex
@@ -5,7 +5,8 @@
 %  Description: Chapter: Evaluation and Results
 %===============================================================================
 
-\chapter{Combined Results}\label{cha:evaluation-results}
+\chapter{Summary of Results and Conclusion}\label{cha:results_conclusion}
+
 
 \todo{redo chapter. Use this to only present a combined overview of results. }
 
