--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-	% !BIB TS-program = biber
+% !BIB TS-program = biber
 % !BIB program = biber
 %===============================================================================
 %          File: main.tex
@@ -31,8 +31,7 @@
   \include{ch_machine_learning}
   \include{ch_model_selection}
 	\include{ch_ensemble_methods}
-  \include{ch_evaluation_results}  
-  \include{ch_conclusion}
+  \include{ch_results_conclusions}  
 
 \backmatter
 	\printbibheading[heading=bibbook]
