--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -239,6 +239,8 @@ This means that the variance structure of the training set is such that the numb
 %rise Typical combinations
 %The four possible combinations of high
 
+\todo{reemplazar esta figure con los resultados de nuestra corrida con un Decision Tree, haciendo referencia a la tecnica que se introduce en el futuro.}
+
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.7\columnwidth]{figures/figure-biasVariance/figure-biasVariance}
@@ -246,6 +248,7 @@ This means that the variance structure of the training set is such that the numb
 }
 \end{center}
 \end{figure}
+
 
 In \cref{figure-biasVariance}, the authors fit a regression model on data to illustrate the interaction between bias and variance. The model increases complexity when using a greater number of features. This is becose during the optimization procedure, the algorithm has to fit more parameters. Thus, the model increases in complexity, as measured in its degrees of freedom.
 
